Change Cron schedule, Sheet columns written to, commit package-lock
Updated cron schedule (daily to weekly)
Changed Sheet columns data is written to.
Committed package-lock.json as standard practice.
Updated README with changes.

--- a/serverless.yml
+++ b/serverless.yml
@@ -16,5 +16,5 @@ functions:
   cron-scrape:
     handler: handler.run
     events:
-      # Invoke Lambda function 4am everyday
-      - schedule: cron(0 4 * * ? *)
+      # Invoke Lambda function 4am every Sunday (Now:pensions updates value every Friday)
+      - schedule: cron(0 4 ? * SUN *)
